--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "koa-body": "^4.0.4",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.3.6"
+    "mongoose": "^5.3.6",
+    "qn": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^5.7.0",
