--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.6",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-paginate": "^5.0.3",
     "qn": "^1.3.0"
   },
   "devDependencies": {
