feat: 完成 comment model

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,14 @@
 {
   "extends": "standard",
   "globals": {
+
+  },
+  "rules": {
+    "camelcase": [
+      0,
+      {
+          "properties": "never"
+      }
+  ]
   }
 }
