--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "node api service",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node --harmony index.js",
-    "dev": "nodemon --exec \"NODE_ENV=development node --harmony index.js\"",
+    "start": "cross-env NODE_ENV=production node --harmony index.js",
+    "dev": "nodemon --exec \"cross-env NODE_ENV=development node --harmony index.js\"",
     "update-geoip-db": "node ./node_modules/geoip-lite/scripts/updatedb.js"
   },
   "author": "chenwangji <694093637@qq.com>",
@@ -23,12 +23,14 @@
     "qn": "^1.3.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.7",
     "yargs": "^12.0.2"
   }
 }
